--- a/SSD1306/SSD1306.csproj
+++ b/SSD1306/SSD1306.csproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.props" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -8,6 +9,16 @@
     <RootNamespace>SSD1306</RootNamespace>
     <AssemblyName>SSD1306</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <PackOnBuild>true</PackOnBuild>
+    <PackageId>SSD1306-Sharp</PackageId>
+    <PackageVersion>0.1</PackageVersion>
+    <Authors>TFA Labs</Authors>
+    <PackageLicenseUrl>https://github.com/iot-sas/SSD1306-Sharp/blob/master/LICENSE</PackageLicenseUrl>
+    <Owners>TFA Labs</Owners>
+    <PackageProjectUrl>https://github.com/iot-sas/SSD1306-Sharp</PackageProjectUrl>
+    <Summary>Simple SSD1306 Display Driver</Summary>
+    <Title>SSD1306-Sharp</Title>
+    <Description>Simple SSD1306 Display Driver for Linux</Description>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -60,4 +71,5 @@
     <Folder Include="I2C\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.targets" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.targets')" />
 </Project>
