--- a/SSD1306/SSD1306.csproj
+++ b/SSD1306/SSD1306.csproj
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.props" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.props')" />
+  <Import Project="..\packages\NuGet.Build.Packaging.0.2.2\build\NuGet.Build.Packaging.props" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.2\build\NuGet.Build.Packaging.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -8,17 +8,17 @@
     <OutputType>Library</OutputType>
     <RootNamespace>SSD1306</RootNamespace>
     <AssemblyName>SSD1306</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <PackOnBuild>true</PackOnBuild>
     <PackageId>SSD1306-Sharp</PackageId>
-    <PackageVersion>0.1</PackageVersion>
+    <PackageVersion>0.2</PackageVersion>
     <Authors>TFA Labs</Authors>
     <PackageLicenseUrl>https://github.com/iot-sas/SSD1306-Sharp/blob/master/LICENSE</PackageLicenseUrl>
     <Owners>TFA Labs</Owners>
     <PackageProjectUrl>https://github.com/iot-sas/SSD1306-Sharp</PackageProjectUrl>
     <Summary>Simple SSD1306 Display Driver</Summary>
     <Title>SSD1306-Sharp</Title>
-    <Description>Simple SSD1306 Display Driver for Linux</Description>
+    <Description>Simple SSD1306 Display Driver for Linux &amp; Meadow</Description>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -49,6 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="I2C\II2CDevice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Fonts\FontInfo.cs" />
     <Compile Include="Fonts\IFont.cs" />
@@ -59,17 +60,15 @@
     <Compile Include="Fonts\MakeFont.cs" />
     <Compile Include="Fonts\Tahmona8.cs" />
     <Compile Include="Display.cs" />
-    <Compile Include="I2C\I2CBus.cs" />
-    <Compile Include="I2C\I2CDevice.cs" />
+    <Compile Include="I2C\I2C-PI\I2CBusPI.cs" />
+    <Compile Include="I2C\I2C-PI\I2CDevicePI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Fonts\FontTemplate.cs" />
+    <None Include="Fonts\TheDotNetFactory_Settings.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Fonts\" />
-    <Folder Include="I2C\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.targets" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.targets')" />
+  <Import Project="..\packages\NuGet.Build.Packaging.0.2.2\build\NuGet.Build.Packaging.targets" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.2\build\NuGet.Build.Packaging.targets')" />
 </Project>
